--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -71,7 +71,7 @@
                   <a class="nav-link" href="contact.html">Contactos</a>
                 </li>
               </ul>
-              <div id="auth-buttons" class="buttom-other-style">
+              <div id="auth-buttons-header" class="buttom-header-style">
                 <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()">
                 <input id="register-btn" class="masinfo" type="submit" value="Registrarse" onclick="register()">
               </div>
@@ -138,7 +138,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="detail_box">
-                      <h1>
+                      <h1 style="font-size: 2.95rem;">
                         Panaderia Santa Clara <br>
                         <span>
                           La mas famosa de Hualpen
@@ -191,12 +191,12 @@
                   </p>
                   <div class="buttom-other-style">
                     <h3>Usuario</h3>
-                    <div id="auth-buttons" class="buttom-other-style">
+                    <div class="auth-buttons">
                       <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()">
                       <input id="register-btn" class="masinfo" type="submit" value="Registrarse" onclick="register()">
                     </div>
                     <h3>Vendedor</h3>
-                    <div id="auth-buttons" class="buttom-other-style">
+                    <div class="auth-buttons" >
                       <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()">
                       <input id="register-btn" class="masinfo" type="submit" value="Registrarse" onclick="register()">
                     </div>
@@ -539,13 +539,13 @@
   <!-- footer section -->
 
   <!-- jQery -->
-  <script src="/frontend/js/jquery-3.4.1.min.js"></script>
+  <script src="../../frontend/js/jquery-3.4.1.min.js"></script>
   <!-- bootstrap js -->
-  <script src="/frontend/js/bootstrap.js"></script>
+  <script src="../../frontend/js/bootstrap.js"></script>
   <!-- slick slider -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
   <!-- custom js -->
-  <script src="/frontend/js/custom.js"></script>
+  <script src="../../frontend/js/custom.js"></script>
   <!-- Google Map -->
   <!-- <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script> -->
