--- a/frontend/temaa/notify.html
+++ b/frontend/temaa/notify.html
@@ -48,7 +48,7 @@
 	</div> 
 	<div class="toast-overlay"
 		id="toast-overlay"></div> 
-	<script src="/frontend/js/notify.js"></script> 
+	<script src="../../frontend/js/notify.js"></script> 
 </body> 
 
 </html>
