--- a/frontend/temaa/chocolux-html/indexNotClean.html
+++ b/frontend/temaa/chocolux-html/indexNotClean.html
@@ -655,13 +655,13 @@
   <!-- footer section -->
 
   <!-- jQery -->
-  <script src="/frontend/js/jquery-3.4.1.min.js"></script>
+  <script src="../../frontend/js/jquery-3.4.1.min.js"></script>
   <!-- bootstrap js -->
-  <script src="/frontend/js/bootstrap.js"></script>
+  <script src="../../frontend/js/bootstrap.js"></script>
   <!-- slick slider -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
   <!-- custom js -->
-  <script src="/frontend/js/custom.js"></script>
+  <script src="../../frontend/js/custom.js"></script>
   <!-- Google Map -->
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
