--- a/frontend/html/SobreNosotros.html
+++ b/frontend/html/SobreNosotros.html
@@ -121,7 +121,7 @@
       <div class="row">
         <div class="col-lg-12 px-0">
           <div class="client_container">
-            <div class="heading_container">
+            <div class="heading_container" style="display: flex; justify-content: center !important; margin-left: 125px !important;">
               <h2>
                 Sobre Nosotros
               </h2>
@@ -130,10 +130,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="box">
-                    <div class="img-box">
-                      <img src="../../frontend/assent/user.jpg" alt="">
-                    </div>
-                    <div class="detail-box">
+                    <div class="detail-box" style="margin-left: 110px !important;">
                       <p>
                         Nuestro proyecto nace desde la experiencia de ser un consumidor que, 
                         al igual que la mayoría de chilenos, se vio en la necesidad y hasta 
@@ -159,7 +156,7 @@
       <div class="row">
         <div class="col-lg-12 px-0">
           <div class="client_container">
-            <div class="heading_container">
+            <div class="heading_container" style="display: flex; justify-content: center !important; margin-left: 200px !important;">
               <h2>
                 Mision
               </h2>
@@ -168,10 +165,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="box">
-                    <div class="img-box">
-                      <img src="../../frontend/assent/user.jpg" alt="">
-                    </div>
-                    <div class="detail-box">
+                    <div class="detail-box" style="margin-left: 110px !important;">
                       <p>El objetivo principal de BreadSpot es facilitar la comunicación entre compradores y vendedores, 
                         con el fin de lograr una compra/venta efectiva del alimento más comprado y vendido del país; el pan, evitando los 
                         problemas comunes con los que se topa el usuario en su búsqueda diaria de un local con este producto disponible.</p>
@@ -192,7 +186,7 @@
   
   <section class="client_section" style="background-color: red;">
     <div class="container">
-      <div class="heading_container text-center mb-2">
+      <div class="heading_container text-center mb-2" style="display: flex; justify-content: center !important; margin-left: 60px !important;">
         <h2>Nuestro Equipo</h2>
       </div>
       <div class="client_grid">
@@ -259,13 +253,13 @@
                 <a href="index.html">
                   Inicio
                 </a>
-                <a href="about.html">
+                <a href="SobreNosotros.html">
                   Sobre Nosotros
                 </a>
-                <a href="chocolate.html">
+                <a href="testimonial.html">
                   Testimonios
                 </a>
-                <a href="testimonial.html">
+                <a href="Socios.html">
                   Socios
                 </a>
                 <a href="contact.html">
@@ -274,19 +268,19 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-7 col-lg-4">
             <div class="info_links">
               <h4>
-                Redes Sociales 
+                Redes Sociales
               </h4>
               <div class="info_links_menu">
-                <a href="index.html">
+                <a href="www.instagram.com">
                   Instagram
                 </a>
-                <a href="about.html">
+                <a href="www.twitter.com">
                   Twitter
                 </a>
-                <a href="chocolate.html">
+                <a href="www.facebook.com">
                   Facebook
                 </a>
               </div>
