--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -455,13 +455,13 @@
                 <a href="index.html">
                   Inicio
                 </a>
-                <a href="about.html">
+                <a href="SobreNosotros.html">
                   Sobre Nosotros
                 </a>
-                <a href="chocolate.html">
+                <a href="testimonial.html">
                   Testimonios
                 </a>
-                <a href="testimonial.html">
+                <a href="Socios.html">
                   Socios
                 </a>
                 <a href="contact.html">
@@ -476,13 +476,13 @@
                 Redes Sociales
               </h4>
               <div class="info_links_menu">
-                <a href="index.html">
+                <a href="www.instagram.com">
                   Instagram
                 </a>
-                <a href="about.html">
+                <a href="www.twitter.com">
                   Twitter
                 </a>
-                <a href="chocolate.html">
+                <a href="www.facebook.com">
                   Facebook
                 </a>
               </div>
