termino de frontend xd

--- a/frontend/html/SobreNosotros.html
+++ b/frontend/html/SobreNosotros.html
@@ -184,7 +184,7 @@
     </div>
   </section>
   
-  <section class="client_section" style="background-color: red;">
+  <section class="client_section">
     <div class="container">
       <div class="heading_container text-center mb-2" style="display: flex; justify-content: center !important; margin-left: 60px !important;">
         <h2>Nuestro Equipo</h2>
