--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -179,7 +179,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 px-5">
-            <div class="client_container" style="background-color: slateblue !important;">
+            <div class="client_container" style="background-color: #cd8731">
               <div class="welcom_container">
                 <h2>Bienvenido!</h2>
                 <div class="content_container">
@@ -303,7 +303,7 @@
           <div class="col-lg-4 ml-auto">
           </div>
           <div class="col-lg-12 px-5">
-            <div class="client_container" style="background-color: rgb(111, 117, 234);">
+            <div class="client_container" style="background-color: #cd8731;">
               <div class="heading_container">
                 <h2>
                   Socios
