--- a/frontend/html/Socios.html
+++ b/frontend/html/Socios.html
@@ -84,7 +84,7 @@
           <div class="col-lg-4 ml-auto">
           </div>
           <div class="col-lg-12 px-5">
-            <div class="client_container" style="background-color: rgb(111, 117, 234);">
+            <div class="client_container" style="background-color: #cd8731;);">
               <div class="heading_container">
                 <h2>
                   Socios
