--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -112,7 +112,7 @@
     </div>
   </header>
 
-    <section class="client_section" style="background-color: rgb(111, 117, 234);">
+    <section class="client_section">
       <div class="container">
         <div class="heading_container text-center mb-4">
           <h2>¡Contactanos!</h2>
