--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -73,7 +73,7 @@
               </ul>
               <div id="auth-buttons-header" class="buttom-header-style">
                 <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()">
-                <input id="register-btn" class="masinfo" type="submit" value="Registrarse" onclick="register()">
+               <!-- <input id="register-btn" class="masinfo" type="submit" value="Registrarse" onclick="register()"> -->
               </div>
               <div id="user-info" class="buttom-other-style" style="display: none;">
                 <span id="username"></span>
@@ -192,12 +192,12 @@
                   <div class="buttom-other-style">
                     <h3>Usuario</h3>
                     <div class="auth-buttons">
-                      <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()">
+                     <!-- <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()"> -->
                       <input id="register-btn" class="masinfo" type="submit" value="Registrarse" onclick="register()">
                     </div>
                     <h3>Vendedor</h3>
                     <div class="auth-buttons" >
-                      <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()">
+                     <!-- <input id="login-btn" class="masinfo" type="submit" value="Iniciar Sesión" onclick="login()"> -->
                       <input id="register-btn" class="masinfo" type="submit" value="Registrarse" onclick="register()">
                     </div>
                   </div>
