--- a/frontend/html/inicioSesiónVendedor.html
+++ b/frontend/html/inicioSesiónVendedor.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="/frontend/assent/login2.png" alt="Imagen" class="side-image">
+    <img src="../../frontend/assent/login2.png" alt="Imagen" class="side-image">
     <section class="container">
         <div class="container">
             <div class="login-container">
