--- a/frontend/html/registroVendedor.html
+++ b/frontend/html/registroVendedor.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="/frontend/assent/register2.png" alt="Imagen" class="side-image">
+    <img src="../../frontend/assent/register2.png" alt="Imagen" class="side-image">
     <section class="container">
         <div class="container">
             <div class="registro-container">
